--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "regenerator-runtime": "^0.13.11",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "react-speech-recognition": "^3.10.0"
   }
 }
